fixed dark mode background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,11 +202,10 @@ th {
 
 #content article table tr:hover {
     color: #FCA311;
-    background: #000;
 }
 
-#content article table th:hover {
-    color: #FCA311;
+#content article table thead tr:hover {
+    color: #000;
 }
 
 #content.active {
@@ -468,19 +467,19 @@ section .btn:hover {
 
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #000;
+        background-color: #1b1b1b;
         color: #eee;
     }
     .card {
         border-color: rgba(255, 255, 255, 0.30);
-        background: #000;
+        background: #1b1b1b;
         color: #eee;
     }
     .card-body h3 a {
         color: #eee;
     }
     .card-style2 .card-footer {
-        background: #000;
+        background: #1b1b1b;
         color: #eee;
         border-color: rgba(255, 255, 255, 0.30);
     }
@@ -488,7 +487,7 @@ section .btn:hover {
         border: 0;
     }
     .card ul li {
-        background: #000;
+        background: #1b1b1b;
     }
     .card h6 {
         color: #fca311;
@@ -498,7 +497,7 @@ section .btn:hover {
     }
     .info-span {
         color: #eee;
-        background: #000;
+        background: #1b1b1b;
         border: 0;
     }
     #content article table td,
